[metadata]
name = delaunayTriangulation
version = 1.0.0
author = mkirc
author_email = m.p.kirchner@gmx.de
description = delaunay triangulation implementation in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mkirc/delaunayTriangulation
project_urls =
    Bug Tracker = https://github.com/mkirc/delaunayTriangulation/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
